--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ home:
 
 collections:
   services:
-    output: true
+    output: false
     sort_by: weight
   team:
-    output: true
+    output: false
 
 defaults:
   - scope:
